// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loading page  logo in dark mode  rendered using loading logo dark mode URL 1`] = `
Array [
  <meta
    charset="utf-8"
  />,
  <meta
    content="IE=edge,chrome=1"
    http-equiv="X-UA-Compatible"
  />,
  <meta
    content="width=device-width"
    name="viewport"
  />,
  <title />,
  null,
  <link
    href="[object Object]/ui/favicons/apple-touch-icon.png"
    rel="apple-touch-icon"
    sizes="180x180"
  />,
  <link
    href="[object Object]/ui/favicons/favicon-32x32.png"
    rel="icon"
    sizes="32x32"
    type="image/png"
  />,
  <link
    href="[object Object]/ui/favicons/favicon-16x16.png"
    rel="icon"
    sizes="16x16"
    type="image/png"
  />,
  <link
    href="[object Object]/ui/favicons/manifest.json"
    rel="manifest"
  />,
  <link
    color="#e8488b"
    href="[object Object]/ui/favicons/safari-pinned-tab.svg"
    rel="mask-icon"
  />,
  <link
    href="[object Object]/ui/favicons/favicon.ico"
    rel="shortcut icon"
  />,
  <meta
    content="[object Object]/ui/favicons/browserconfig.xml"
    name="msapplication-config"
  />,
  <meta
    content="#ffffff"
    name="theme-color"
  />,
  null,
  <meta
    name="add-styles-here"
  />,
  <meta
    name="add-scripts-here"
  />,
  <osd-csp
    data="{\\"strictCsp\\":true}"
  />,
  <osd-injected-metadata
    data="{\\"version\\":\\"opensearchDashboardsVersion\\",\\"buildNumber\\":1,\\"basePath\\":\\"\\",\\"serverBasePath\\":\\"\\",\\"env\\":{\\"packageInfo\\":{\\"version\\":\\"\\",\\"branch\\":\\"\\",\\"buildNum\\":1,\\"buildSha\\":\\"\\",\\"dist\\":true},\\"mode\\":{\\"name\\":\\"production\\",\\"dev\\":true,\\"prod\\":false}},\\"anonymousStatusPage\\":false,\\"i18n\\":{\\"translationsUrl\\":\\"\\"},\\"csp\\":{\\"warnLegacyBrowsers\\":true},\\"uiPlugins\\":[],\\"legacyMetadata\\":{\\"uiSettings\\":{\\"defaults\\":{\\"legacyInjectedUiSettingDefaults\\":true},\\"user\\":{}}},\\"branding\\":{\\"darkMode\\":false,\\"logo\\":{},\\"mark\\":{\\"defaultUrl\\":\\"/defaultModeMark\\",\\"darkModeUrl\\":\\"/darkModeMark\\"},\\"loadingLogo\\":{\\"defaultUrl\\":\\"/defaultModeLoadingLogo\\",\\"darkModeUrl\\":\\"/darkModeLoadingLogo\\"},\\"title\\":\\"custom title\\"}}"
  />,
  <div
    class="osdWelcomeView"
    data-test-subj="osdLoadingMessage"
    id="osd_loading_message"
    style="display:none"
  >
    <div
      class="osdLoaderWrap"
      data-test-subj="loadingLogo"
    >
      <div
        class="loadingLogoContainer"
      >
        <img
          alt="undefined logo"
          class="loadingLogo"
          src="/darkModeLoadingLogo"
        />
      </div>
      <div
        class="osdWelcomeText"
        data-error-message=""
      />
    </div>
  </div>,
  <div
    class="osdWelcomeView"
    id="osd_legacy_browser_error"
    style="display:none"
  >
    <svg
      viewBox="0 0 64 64"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M19.97,20v20c0,6.63,5.36,12,11.96,12h19.93v8h-19.93c-11.01,0-19.93-8.95-19.93-20v-20h7.97Z"
        style="fill:#00796b;fill-rule:evenodd;stroke-width:0"
      />
      <path
        d="M19.97,4v24h-7.97V4h7.97Z"
        style="fill:#00796b;fill-rule:evenodd;stroke-width:0"
      />
      <path
        d="M27.95,4h3.98c11.01,0,19.93,8.95,19.93,20v12H12v-8s31.9,0,31.9,0v-4c0-6.63-5.36-12-11.96-12h-3.98v-8Z"
        style="fill:#00796b;fill-rule:evenodd;stroke-width:0"
      />
    </svg>
    <h2
      class="osdWelcomeTitle"
    />
    <div
      class="osdWelcomeText"
    />
  </div>,
  <script>
    
            // Since this is an unsafe inline script, this code will not run
            // in browsers that support content security policy(CSP). This is
            // intentional as we check for the existence of __osdCspNotEnforced__ in
            // bootstrap.
            window.__osdCspNotEnforced__ = true;
          
  </script>,
  <script
    src="[object Object]/bootstrap.js"
  />,
]
`;

exports[`Loading page  logo in dark mode  rendered using loading logo default mode URL 1`] = `
Array [
  <meta
    charset="utf-8"
  />,
  <meta
    content="IE=edge,chrome=1"
    http-equiv="X-UA-Compatible"
  />,
  <meta
    content="width=device-width"
    name="viewport"
  />,
  <title />,
  null,
  <link
    href="[object Object]/ui/favicons/apple-touch-icon.png"
    rel="apple-touch-icon"
    sizes="180x180"
  />,
  <link
    href="[object Object]/ui/favicons/favicon-32x32.png"
    rel="icon"
    sizes="32x32"
    type="image/png"
  />,
  <link
    href="[object Object]/ui/favicons/favicon-16x16.png"
    rel="icon"
    sizes="16x16"
    type="image/png"
  />,
  <link
    href="[object Object]/ui/favicons/manifest.json"
    rel="manifest"
  />,
  <link
    color="#e8488b"
    href="[object Object]/ui/favicons/safari-pinned-tab.svg"
    rel="mask-icon"
  />,
  <link
    href="[object Object]/ui/favicons/favicon.ico"
    rel="shortcut icon"
  />,
  <meta
    content="[object Object]/ui/favicons/browserconfig.xml"
    name="msapplication-config"
  />,
  <meta
    content="#ffffff"
    name="theme-color"
  />,
  null,
  <meta
    name="add-styles-here"
  />,
  <meta
    name="add-scripts-here"
  />,
  <osd-csp
    data="{\\"strictCsp\\":true}"
  />,
  <osd-injected-metadata
    data="{\\"version\\":\\"opensearchDashboardsVersion\\",\\"buildNumber\\":1,\\"basePath\\":\\"\\",\\"serverBasePath\\":\\"\\",\\"env\\":{\\"packageInfo\\":{\\"version\\":\\"\\",\\"branch\\":\\"\\",\\"buildNum\\":1,\\"buildSha\\":\\"\\",\\"dist\\":true},\\"mode\\":{\\"name\\":\\"production\\",\\"dev\\":true,\\"prod\\":false}},\\"anonymousStatusPage\\":false,\\"i18n\\":{\\"translationsUrl\\":\\"\\"},\\"csp\\":{\\"warnLegacyBrowsers\\":true},\\"uiPlugins\\":[],\\"legacyMetadata\\":{\\"uiSettings\\":{\\"defaults\\":{\\"legacyInjectedUiSettingDefaults\\":true},\\"user\\":{}}},\\"branding\\":{\\"darkMode\\":false,\\"logo\\":{},\\"mark\\":{\\"defaultUrl\\":\\"/defaultModeMark\\",\\"darkModeUrl\\":\\"/darkModeMark\\"},\\"loadingLogo\\":{\\"defaultUrl\\":\\"/defaultModeLoadingLogo\\"},\\"title\\":\\"custom title\\"}}"
  />,
  <div
    class="osdWelcomeView"
    data-test-subj="osdLoadingMessage"
    id="osd_loading_message"
    style="display:none"
  >
    <div
      class="osdLoaderWrap"
      data-test-subj="loadingLogo"
    >
      <div
        class="loadingLogoContainer"
      >
        <img
          alt="undefined logo"
          class="loadingLogo"
          src="/defaultModeLoadingLogo"
        />
      </div>
      <div
        class="osdWelcomeText"
        data-error-message=""
      />
    </div>
  </div>,
  <div
    class="osdWelcomeView"
    id="osd_legacy_browser_error"
    style="display:none"
  >
    <svg
      viewBox="0 0 64 64"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M19.97,20v20c0,6.63,5.36,12,11.96,12h19.93v8h-19.93c-11.01,0-19.93-8.95-19.93-20v-20h7.97Z"
        style="fill:#00796b;fill-rule:evenodd;stroke-width:0"
      />
      <path
        d="M19.97,4v24h-7.97V4h7.97Z"
        style="fill:#00796b;fill-rule:evenodd;stroke-width:0"
      />
      <path
        d="M27.95,4h3.98c11.01,0,19.93,8.95,19.93,20v12H12v-8s31.9,0,31.9,0v-4c0-6.63-5.36-12-11.96-12h-3.98v-8Z"
        style="fill:#00796b;fill-rule:evenodd;stroke-width:0"
      />
    </svg>
    <h2
      class="osdWelcomeTitle"
    />
    <div
      class="osdWelcomeText"
    />
  </div>,
  <script>
    
            // Since this is an unsafe inline script, this code will not run
            // in browsers that support content security policy(CSP). This is
            // intentional as we check for the existence of __osdCspNotEnforced__ in
            // bootstrap.
            window.__osdCspNotEnforced__ = true;
          
  </script>,
  <script
    src="[object Object]/bootstrap.js"
  />,
]
`;

exports[`Loading page  logo in dark mode  rendered using mark dark mode URL with loading bar 1`] = `
Array [
  <meta
    charset="utf-8"
  />,
  <meta
    content="IE=edge,chrome=1"
    http-equiv="X-UA-Compatible"
  />,
  <meta
    content="width=device-width"
    name="viewport"
  />,
  <title />,
  null,
  <link
    href="[object Object]/ui/favicons/apple-touch-icon.png"
    rel="apple-touch-icon"
    sizes="180x180"
  />,
  <link
    href="[object Object]/ui/favicons/favicon-32x32.png"
    rel="icon"
    sizes="32x32"
    type="image/png"
  />,
  <link
    href="[object Object]/ui/favicons/favicon-16x16.png"
    rel="icon"
    sizes="16x16"
    type="image/png"
  />,
  <link
    href="[object Object]/ui/favicons/manifest.json"
    rel="manifest"
  />,
  <link
    color="#e8488b"
    href="[object Object]/ui/favicons/safari-pinned-tab.svg"
    rel="mask-icon"
  />,
  <link
    href="[object Object]/ui/favicons/favicon.ico"
    rel="shortcut icon"
  />,
  <meta
    content="[object Object]/ui/favicons/browserconfig.xml"
    name="msapplication-config"
  />,
  <meta
    content="#ffffff"
    name="theme-color"
  />,
  null,
  <meta
    name="add-styles-here"
  />,
  <meta
    name="add-scripts-here"
  />,
  <osd-csp
    data="{\\"strictCsp\\":true}"
  />,
  <osd-injected-metadata
    data="{\\"version\\":\\"opensearchDashboardsVersion\\",\\"buildNumber\\":1,\\"basePath\\":\\"\\",\\"serverBasePath\\":\\"\\",\\"env\\":{\\"packageInfo\\":{\\"version\\":\\"\\",\\"branch\\":\\"\\",\\"buildNum\\":1,\\"buildSha\\":\\"\\",\\"dist\\":true},\\"mode\\":{\\"name\\":\\"production\\",\\"dev\\":true,\\"prod\\":false}},\\"anonymousStatusPage\\":false,\\"i18n\\":{\\"translationsUrl\\":\\"\\"},\\"csp\\":{\\"warnLegacyBrowsers\\":true},\\"uiPlugins\\":[],\\"legacyMetadata\\":{\\"uiSettings\\":{\\"defaults\\":{\\"legacyInjectedUiSettingDefaults\\":true},\\"user\\":{}}},\\"branding\\":{\\"darkMode\\":false,\\"logo\\":{},\\"mark\\":{\\"defaultUrl\\":\\"/defaultModeMark\\",\\"darkModeUrl\\":\\"/darkModeMark\\"},\\"loadingLogo\\":{},\\"title\\":\\"custom title\\"}}"
  />,
  <div
    class="osdWelcomeView"
    data-test-subj="osdLoadingMessage"
    id="osd_loading_message"
    style="display:none"
  >
    <div
      class="osdLoaderWrap"
      data-test-subj="loadingLogo"
    >
      <div
        class="loadingLogoContainer"
      >
        <img
          alt="undefined logo"
          class="loadingLogo"
          src="/darkModeMark"
        />
      </div>
      <div
        class="osdWelcomeText"
        data-error-message=""
      />
      <div
        class="osdProgress"
      />
    </div>
  </div>,
  <div
    class="osdWelcomeView"
    id="osd_legacy_browser_error"
    style="display:none"
  >
    <svg
      viewBox="0 0 64 64"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M19.97,20v20c0,6.63,5.36,12,11.96,12h19.93v8h-19.93c-11.01,0-19.93-8.95-19.93-20v-20h7.97Z"
        style="fill:#00796b;fill-rule:evenodd;stroke-width:0"
      />
      <path
        d="M19.97,4v24h-7.97V4h7.97Z"
        style="fill:#00796b;fill-rule:evenodd;stroke-width:0"
      />
      <path
        d="M27.95,4h3.98c11.01,0,19.93,8.95,19.93,20v12H12v-8s31.9,0,31.9,0v-4c0-6.63-5.36-12-11.96-12h-3.98v-8Z"
        style="fill:#00796b;fill-rule:evenodd;stroke-width:0"
      />
    </svg>
    <h2
      class="osdWelcomeTitle"
    />
    <div
      class="osdWelcomeText"
    />
  </div>,
  <script>
    
            // Since this is an unsafe inline script, this code will not run
            // in browsers that support content security policy(CSP). This is
            // intentional as we check for the existence of __osdCspNotEnforced__ in
            // bootstrap.
            window.__osdCspNotEnforced__ = true;
          
  </script>,
  <script
    src="[object Object]/bootstrap.js"
  />,
]
`;

exports[`Loading page  logo in dark mode  rendered using mark default mode URL with loading bar 1`] = `
Array [
  <meta
    charset="utf-8"
  />,
  <meta
    content="IE=edge,chrome=1"
    http-equiv="X-UA-Compatible"
  />,
  <meta
    content="width=device-width"
    name="viewport"
  />,
  <title />,
  null,
  <link
    href="[object Object]/ui/favicons/apple-touch-icon.png"
    rel="apple-touch-icon"
    sizes="180x180"
  />,
  <link
    href="[object Object]/ui/favicons/favicon-32x32.png"
    rel="icon"
    sizes="32x32"
    type="image/png"
  />,
  <link
    href="[object Object]/ui/favicons/favicon-16x16.png"
    rel="icon"
    sizes="16x16"
    type="image/png"
  />,
  <link
    href="[object Object]/ui/favicons/manifest.json"
    rel="manifest"
  />,
  <link
    color="#e8488b"
    href="[object Object]/ui/favicons/safari-pinned-tab.svg"
    rel="mask-icon"
  />,
  <link
    href="[object Object]/ui/favicons/favicon.ico"
    rel="shortcut icon"
  />,
  <meta
    content="[object Object]/ui/favicons/browserconfig.xml"
    name="msapplication-config"
  />,
  <meta
    content="#ffffff"
    name="theme-color"
  />,
  null,
  <meta
    name="add-styles-here"
  />,
  <meta
    name="add-scripts-here"
  />,
  <osd-csp
    data="{\\"strictCsp\\":true}"
  />,
  <osd-injected-metadata
    data="{\\"version\\":\\"opensearchDashboardsVersion\\",\\"buildNumber\\":1,\\"basePath\\":\\"\\",\\"serverBasePath\\":\\"\\",\\"env\\":{\\"packageInfo\\":{\\"version\\":\\"\\",\\"branch\\":\\"\\",\\"buildNum\\":1,\\"buildSha\\":\\"\\",\\"dist\\":true},\\"mode\\":{\\"name\\":\\"production\\",\\"dev\\":true,\\"prod\\":false}},\\"anonymousStatusPage\\":false,\\"i18n\\":{\\"translationsUrl\\":\\"\\"},\\"csp\\":{\\"warnLegacyBrowsers\\":true},\\"uiPlugins\\":[],\\"legacyMetadata\\":{\\"uiSettings\\":{\\"defaults\\":{\\"legacyInjectedUiSettingDefaults\\":true},\\"user\\":{}}},\\"branding\\":{\\"darkMode\\":false,\\"logo\\":{},\\"mark\\":{\\"defaultUrl\\":\\"/defaultModeMark\\"},\\"loadingLogo\\":{},\\"title\\":\\"custom title\\"}}"
  />,
  <div
    class="osdWelcomeView"
    data-test-subj="osdLoadingMessage"
    id="osd_loading_message"
    style="display:none"
  >
    <div
      class="osdLoaderWrap"
      data-test-subj="loadingLogo"
    >
      <div
        class="loadingLogoContainer"
      >
        <img
          alt="undefined logo"
          class="loadingLogo"
          src="/defaultModeMark"
        />
      </div>
      <div
        class="osdWelcomeText"
        data-error-message=""
      />
      <div
        class="osdProgress"
      />
    </div>
  </div>,
  <div
    class="osdWelcomeView"
    id="osd_legacy_browser_error"
    style="display:none"
  >
    <svg
      viewBox="0 0 64 64"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M19.97,20v20c0,6.63,5.36,12,11.96,12h19.93v8h-19.93c-11.01,0-19.93-8.95-19.93-20v-20h7.97Z"
        style="fill:#00796b;fill-rule:evenodd;stroke-width:0"
      />
      <path
        d="M19.97,4v24h-7.97V4h7.97Z"
        style="fill:#00796b;fill-rule:evenodd;stroke-width:0"
      />
      <path
        d="M27.95,4h3.98c11.01,0,19.93,8.95,19.93,20v12H12v-8s31.9,0,31.9,0v-4c0-6.63-5.36-12-11.96-12h-3.98v-8Z"
        style="fill:#00796b;fill-rule:evenodd;stroke-width:0"
      />
    </svg>
    <h2
      class="osdWelcomeTitle"
    />
    <div
      class="osdWelcomeText"
    />
  </div>,
  <script>
    
            // Since this is an unsafe inline script, this code will not run
            // in browsers that support content security policy(CSP). This is
            // intentional as we check for the existence of __osdCspNotEnforced__ in
            // bootstrap.
            window.__osdCspNotEnforced__ = true;
          
  </script>,
  <script
    src="[object Object]/bootstrap.js"
  />,
]
`;

exports[`Loading page  logo in dark mode  renders using original opensearch loading spinner 1`] = `
Array [
  <meta
    charset="utf-8"
  />,
  <meta
    content="IE=edge,chrome=1"
    http-equiv="X-UA-Compatible"
  />,
  <meta
    content="width=device-width"
    name="viewport"
  />,
  <title />,
  null,
  <link
    href="[object Object]/ui/favicons/apple-touch-icon.png"
    rel="apple-touch-icon"
    sizes="180x180"
  />,
  <link
    href="[object Object]/ui/favicons/favicon-32x32.png"
    rel="icon"
    sizes="32x32"
    type="image/png"
  />,
  <link
    href="[object Object]/ui/favicons/favicon-16x16.png"
    rel="icon"
    sizes="16x16"
    type="image/png"
  />,
  <link
    href="[object Object]/ui/favicons/manifest.json"
    rel="manifest"
  />,
  <link
    color="#e8488b"
    href="[object Object]/ui/favicons/safari-pinned-tab.svg"
    rel="mask-icon"
  />,
  <link
    href="[object Object]/ui/favicons/favicon.ico"
    rel="shortcut icon"
  />,
  <meta
    content="[object Object]/ui/favicons/browserconfig.xml"
    name="msapplication-config"
  />,
  <meta
    content="#ffffff"
    name="theme-color"
  />,
  null,
  <meta
    name="add-styles-here"
  />,
  <meta
    name="add-scripts-here"
  />,
  <osd-csp
    data="{\\"strictCsp\\":true}"
  />,
  <osd-injected-metadata
    data="{\\"version\\":\\"opensearchDashboardsVersion\\",\\"buildNumber\\":1,\\"basePath\\":\\"\\",\\"serverBasePath\\":\\"\\",\\"env\\":{\\"packageInfo\\":{\\"version\\":\\"\\",\\"branch\\":\\"\\",\\"buildNum\\":1,\\"buildSha\\":\\"\\",\\"dist\\":true},\\"mode\\":{\\"name\\":\\"production\\",\\"dev\\":true,\\"prod\\":false}},\\"anonymousStatusPage\\":false,\\"i18n\\":{\\"translationsUrl\\":\\"\\"},\\"csp\\":{\\"warnLegacyBrowsers\\":true},\\"uiPlugins\\":[],\\"legacyMetadata\\":{\\"uiSettings\\":{\\"defaults\\":{\\"legacyInjectedUiSettingDefaults\\":true},\\"user\\":{}}},\\"branding\\":{\\"darkMode\\":false,\\"logo\\":{},\\"mark\\":{},\\"loadingLogo\\":{},\\"title\\":\\"custom title\\"}}"
  />,
  <div
    class="osdWelcomeView"
    data-test-subj="osdLoadingMessage"
    id="osd_loading_message"
    style="display:none"
  >
    <div
      class="osdLoaderWrap"
      data-test-subj="loadingLogo"
    >
      <svg
        fill="none"
        viewBox="0 0 90 90"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M53.8,42.4v-7.5c0-6.9-5.5-12.4-12.4-12.4h-2.5v5h2.5c4.1,0,7.4,3.3,7.4,7.5v2.5H34l0,0v-5v-9.9h-5v9.9v5l0,0v5v2.4c0,6.9,5.5,12.4,12.4,12.4h12.4v-5H41.4c-4.1,0-7.4-3.3-7.4-7.5v-2.5L53.8,42.4L53.8,42.4z"
          style="fill:#00796b;fill-rule:evenodd;stroke-width:0"
        />
        <g>
          <path
            d="M75.7374 37.5C74.4878 37.5 73.4748 38.513 73.4748 39.7626C73.4748 58.3813 58.3813 73.4748 39.7626 73.4748C38.513 73.4748 37.5 74.4878 37.5 75.7374C37.5 76.987 38.513 78 39.7626 78C60.8805 78 78 60.8805 78 39.7626C78 38.513 76.987 37.5 75.7374 37.5Z"
            fill="#00796b"
          />
          <animateTransform
            attributeName="transform"
            dur="1.5s"
            from="0 40 40"
            keyTimes="0; .3; .7; 1"
            repeatCount="indefinite"
            to="359.9 40 40"
            type="rotate"
            values="0 40 40; 15 40 40; 340 40 40; 359.9 40 40"
          />
        </g>
      </svg>
      <div
        class="osdWelcomeText"
        data-error-message=""
      />
    </div>
  </div>,
  <div
    class="osdWelcomeView"
    id="osd_legacy_browser_error"
    style="display:none"
  >
    <svg
      viewBox="0 0 64 64"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M19.97,20v20c0,6.63,5.36,12,11.96,12h19.93v8h-19.93c-11.01,0-19.93-8.95-19.93-20v-20h7.97Z"
        style="fill:#00796b;fill-rule:evenodd;stroke-width:0"
      />
      <path
        d="M19.97,4v24h-7.97V4h7.97Z"
        style="fill:#00796b;fill-rule:evenodd;stroke-width:0"
      />
      <path
        d="M27.95,4h3.98c11.01,0,19.93,8.95,19.93,20v12H12v-8s31.9,0,31.9,0v-4c0-6.63-5.36-12-11.96-12h-3.98v-8Z"
        style="fill:#00796b;fill-rule:evenodd;stroke-width:0"
      />
    </svg>
    <h2
      class="osdWelcomeTitle"
    />
    <div
      class="osdWelcomeText"
    />
  </div>,
  <script>
    
            // Since this is an unsafe inline script, this code will not run
            // in browsers that support content security policy(CSP). This is
            // intentional as we check for the existence of __osdCspNotEnforced__ in
            // bootstrap.
            window.__osdCspNotEnforced__ = true;
          
  </script>,
  <script
    src="[object Object]/bootstrap.js"
  />,
]
`;

exports[`Loading page  logo in default mode  rendered using loading logo default mode URL 1`] = `
Array [
  <meta
    charset="utf-8"
  />,
  <meta
    content="IE=edge,chrome=1"
    http-equiv="X-UA-Compatible"
  />,
  <meta
    content="width=device-width"
    name="viewport"
  />,
  <title>
    custom title
  </title>,
  null,
  <link
    href="[object Object]/ui/favicons/apple-touch-icon.png"
    rel="apple-touch-icon"
    sizes="180x180"
  />,
  <link
    href="[object Object]/ui/favicons/favicon-32x32.png"
    rel="icon"
    sizes="32x32"
    type="image/png"
  />,
  <link
    href="[object Object]/ui/favicons/favicon-16x16.png"
    rel="icon"
    sizes="16x16"
    type="image/png"
  />,
  <link
    href="[object Object]/ui/favicons/manifest.json"
    rel="manifest"
  />,
  <link
    color="#e8488b"
    href="[object Object]/ui/favicons/safari-pinned-tab.svg"
    rel="mask-icon"
  />,
  <link
    href="[object Object]/ui/favicons/favicon.ico"
    rel="shortcut icon"
  />,
  <meta
    content="[object Object]/ui/favicons/browserconfig.xml"
    name="msapplication-config"
  />,
  <meta
    content="#ffffff"
    name="theme-color"
  />,
  null,
  <meta
    name="add-styles-here"
  />,
  <meta
    name="add-scripts-here"
  />,
  <osd-csp
    data="{\\"strictCsp\\":true}"
  />,
  <osd-injected-metadata
    data="{\\"version\\":\\"opensearchDashboardsVersion\\",\\"buildNumber\\":1,\\"basePath\\":\\"\\",\\"serverBasePath\\":\\"\\",\\"env\\":{\\"packageInfo\\":{\\"version\\":\\"\\",\\"branch\\":\\"\\",\\"buildNum\\":1,\\"buildSha\\":\\"\\",\\"dist\\":true},\\"mode\\":{\\"name\\":\\"production\\",\\"dev\\":true,\\"prod\\":false}},\\"anonymousStatusPage\\":false,\\"i18n\\":{\\"translationsUrl\\":\\"\\"},\\"csp\\":{\\"warnLegacyBrowsers\\":true},\\"uiPlugins\\":[],\\"legacyMetadata\\":{\\"uiSettings\\":{\\"defaults\\":{\\"legacyInjectedUiSettingDefaults\\":true},\\"user\\":{}}},\\"branding\\":{\\"darkMode\\":false,\\"logo\\":{},\\"mark\\":{\\"defaultUrl\\":\\"/defaultModeMark\\"},\\"loadingLogo\\":{\\"defaultUrl\\":\\"defaultModeLoadingLogo/\\"},\\"applicationTitle\\":\\"custom title\\"}}"
  />,
  <div
    class="osdWelcomeView"
    data-test-subj="osdLoadingMessage"
    id="osd_loading_message"
    style="display:none"
  >
    <div
      class="osdLoaderWrap"
      data-test-subj="loadingLogo"
    >
      <div
        class="loadingLogoContainer"
      >
        <img
          alt="custom title logo"
          class="loadingLogo"
          src="defaultModeLoadingLogo/"
        />
      </div>
      <div
        class="osdWelcomeText"
        data-error-message=""
      />
    </div>
  </div>,
  <div
    class="osdWelcomeView"
    id="osd_legacy_browser_error"
    style="display:none"
  >
    <svg
      viewBox="0 0 64 64"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M19.97,20v20c0,6.63,5.36,12,11.96,12h19.93v8h-19.93c-11.01,0-19.93-8.95-19.93-20v-20h7.97Z"
        style="fill:#00796b;fill-rule:evenodd;stroke-width:0"
      />
      <path
        d="M19.97,4v24h-7.97V4h7.97Z"
        style="fill:#00796b;fill-rule:evenodd;stroke-width:0"
      />
      <path
        d="M27.95,4h3.98c11.01,0,19.93,8.95,19.93,20v12H12v-8s31.9,0,31.9,0v-4c0-6.63-5.36-12-11.96-12h-3.98v-8Z"
        style="fill:#00796b;fill-rule:evenodd;stroke-width:0"
      />
    </svg>
    <h2
      class="osdWelcomeTitle"
    />
    <div
      class="osdWelcomeText"
    />
  </div>,
  <script>
    
            // Since this is an unsafe inline script, this code will not run
            // in browsers that support content security policy(CSP). This is
            // intentional as we check for the existence of __osdCspNotEnforced__ in
            // bootstrap.
            window.__osdCspNotEnforced__ = true;
          
  </script>,
  <script
    src="[object Object]/bootstrap.js"
  />,
]
`;

exports[`Loading page  logo in default mode  rendered using mark default mode URL with horizontal loading bar 1`] = `
Array [
  <meta
    charset="utf-8"
  />,
  <meta
    content="IE=edge,chrome=1"
    http-equiv="X-UA-Compatible"
  />,
  <meta
    content="width=device-width"
    name="viewport"
  />,
  <title>
    custom title
  </title>,
  null,
  <link
    href="[object Object]/ui/favicons/apple-touch-icon.png"
    rel="apple-touch-icon"
    sizes="180x180"
  />,
  <link
    href="[object Object]/ui/favicons/favicon-32x32.png"
    rel="icon"
    sizes="32x32"
    type="image/png"
  />,
  <link
    href="[object Object]/ui/favicons/favicon-16x16.png"
    rel="icon"
    sizes="16x16"
    type="image/png"
  />,
  <link
    href="[object Object]/ui/favicons/manifest.json"
    rel="manifest"
  />,
  <link
    color="#e8488b"
    href="[object Object]/ui/favicons/safari-pinned-tab.svg"
    rel="mask-icon"
  />,
  <link
    href="[object Object]/ui/favicons/favicon.ico"
    rel="shortcut icon"
  />,
  <meta
    content="[object Object]/ui/favicons/browserconfig.xml"
    name="msapplication-config"
  />,
  <meta
    content="#ffffff"
    name="theme-color"
  />,
  null,
  <meta
    name="add-styles-here"
  />,
  <meta
    name="add-scripts-here"
  />,
  <osd-csp
    data="{\\"strictCsp\\":true}"
  />,
  <osd-injected-metadata
    data="{\\"version\\":\\"opensearchDashboardsVersion\\",\\"buildNumber\\":1,\\"basePath\\":\\"\\",\\"serverBasePath\\":\\"\\",\\"env\\":{\\"packageInfo\\":{\\"version\\":\\"\\",\\"branch\\":\\"\\",\\"buildNum\\":1,\\"buildSha\\":\\"\\",\\"dist\\":true},\\"mode\\":{\\"name\\":\\"production\\",\\"dev\\":true,\\"prod\\":false}},\\"anonymousStatusPage\\":false,\\"i18n\\":{\\"translationsUrl\\":\\"\\"},\\"csp\\":{\\"warnLegacyBrowsers\\":true},\\"uiPlugins\\":[],\\"legacyMetadata\\":{\\"uiSettings\\":{\\"defaults\\":{\\"legacyInjectedUiSettingDefaults\\":true},\\"user\\":{}}},\\"branding\\":{\\"darkMode\\":false,\\"logo\\":{},\\"mark\\":{\\"defaultUrl\\":\\"/defaultModeMark\\"},\\"loadingLogo\\":{},\\"applicationTitle\\":\\"custom title\\"}}"
  />,
  <div
    class="osdWelcomeView"
    data-test-subj="osdLoadingMessage"
    id="osd_loading_message"
    style="display:none"
  >
    <div
      class="osdLoaderWrap"
      data-test-subj="loadingLogo"
    >
      <div
        class="loadingLogoContainer"
      >
        <img
          alt="custom title logo"
          class="loadingLogo"
          src="/defaultModeMark"
        />
      </div>
      <div
        class="osdWelcomeText"
        data-error-message=""
      />
      <div
        class="osdProgress"
      />
    </div>
  </div>,
  <div
    class="osdWelcomeView"
    id="osd_legacy_browser_error"
    style="display:none"
  >
    <svg
      viewBox="0 0 64 64"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M19.97,20v20c0,6.63,5.36,12,11.96,12h19.93v8h-19.93c-11.01,0-19.93-8.95-19.93-20v-20h7.97Z"
        style="fill:#00796b;fill-rule:evenodd;stroke-width:0"
      />
      <path
        d="M19.97,4v24h-7.97V4h7.97Z"
        style="fill:#00796b;fill-rule:evenodd;stroke-width:0"
      />
      <path
        d="M27.95,4h3.98c11.01,0,19.93,8.95,19.93,20v12H12v-8s31.9,0,31.9,0v-4c0-6.63-5.36-12-11.96-12h-3.98v-8Z"
        style="fill:#00796b;fill-rule:evenodd;stroke-width:0"
      />
    </svg>
    <h2
      class="osdWelcomeTitle"
    />
    <div
      class="osdWelcomeText"
    />
  </div>,
  <script>
    
            // Since this is an unsafe inline script, this code will not run
            // in browsers that support content security policy(CSP). This is
            // intentional as we check for the existence of __osdCspNotEnforced__ in
            // bootstrap.
            window.__osdCspNotEnforced__ = true;
          
  </script>,
  <script
    src="[object Object]/bootstrap.js"
  />,
]
`;

exports[`Loading page  logo in default mode  rendered using the original OpenSearch loading logo spinner 1`] = `
Array [
  <meta
    charset="utf-8"
  />,
  <meta
    content="IE=edge,chrome=1"
    http-equiv="X-UA-Compatible"
  />,
  <meta
    content="width=device-width"
    name="viewport"
  />,
  <title>
    custom title
  </title>,
  null,
  <link
    href="[object Object]/ui/favicons/apple-touch-icon.png"
    rel="apple-touch-icon"
    sizes="180x180"
  />,
  <link
    href="[object Object]/ui/favicons/favicon-32x32.png"
    rel="icon"
    sizes="32x32"
    type="image/png"
  />,
  <link
    href="[object Object]/ui/favicons/favicon-16x16.png"
    rel="icon"
    sizes="16x16"
    type="image/png"
  />,
  <link
    href="[object Object]/ui/favicons/manifest.json"
    rel="manifest"
  />,
  <link
    color="#e8488b"
    href="[object Object]/ui/favicons/safari-pinned-tab.svg"
    rel="mask-icon"
  />,
  <link
    href="[object Object]/ui/favicons/favicon.ico"
    rel="shortcut icon"
  />,
  <meta
    content="[object Object]/ui/favicons/browserconfig.xml"
    name="msapplication-config"
  />,
  <meta
    content="#ffffff"
    name="theme-color"
  />,
  null,
  <meta
    name="add-styles-here"
  />,
  <meta
    name="add-scripts-here"
  />,
  <osd-csp
    data="{\\"strictCsp\\":true}"
  />,
  <osd-injected-metadata
    data="{\\"version\\":\\"opensearchDashboardsVersion\\",\\"buildNumber\\":1,\\"basePath\\":\\"\\",\\"serverBasePath\\":\\"\\",\\"env\\":{\\"packageInfo\\":{\\"version\\":\\"\\",\\"branch\\":\\"\\",\\"buildNum\\":1,\\"buildSha\\":\\"\\",\\"dist\\":true},\\"mode\\":{\\"name\\":\\"production\\",\\"dev\\":true,\\"prod\\":false}},\\"anonymousStatusPage\\":false,\\"i18n\\":{\\"translationsUrl\\":\\"\\"},\\"csp\\":{\\"warnLegacyBrowsers\\":true},\\"uiPlugins\\":[],\\"legacyMetadata\\":{\\"uiSettings\\":{\\"defaults\\":{\\"legacyInjectedUiSettingDefaults\\":true},\\"user\\":{}}},\\"branding\\":{\\"darkMode\\":false,\\"logo\\":{},\\"mark\\":{},\\"loadingLogo\\":{},\\"applicationTitle\\":\\"custom title\\"}}"
  />,
  <div
    class="osdWelcomeView"
    data-test-subj="osdLoadingMessage"
    id="osd_loading_message"
    style="display:none"
  >
    <div
      class="osdLoaderWrap"
      data-test-subj="loadingLogo"
    >
      <svg
        fill="none"
        viewBox="0 0 90 90"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M53.8,42.4v-7.5c0-6.9-5.5-12.4-12.4-12.4h-2.5v5h2.5c4.1,0,7.4,3.3,7.4,7.5v2.5H34l0,0v-5v-9.9h-5v9.9v5l0,0v5v2.4c0,6.9,5.5,12.4,12.4,12.4h12.4v-5H41.4c-4.1,0-7.4-3.3-7.4-7.5v-2.5L53.8,42.4L53.8,42.4z"
          style="fill:#00796b;fill-rule:evenodd;stroke-width:0"
        />
        <g>
          <path
            d="M75.7374 37.5C74.4878 37.5 73.4748 38.513 73.4748 39.7626C73.4748 58.3813 58.3813 73.4748 39.7626 73.4748C38.513 73.4748 37.5 74.4878 37.5 75.7374C37.5 76.987 38.513 78 39.7626 78C60.8805 78 78 60.8805 78 39.7626C78 38.513 76.987 37.5 75.7374 37.5Z"
            fill="#00796b"
          />
          <animateTransform
            attributeName="transform"
            dur="1.5s"
            from="0 40 40"
            keyTimes="0; .3; .7; 1"
            repeatCount="indefinite"
            to="359.9 40 40"
            type="rotate"
            values="0 40 40; 15 40 40; 340 40 40; 359.9 40 40"
          />
        </g>
      </svg>
      <div
        class="osdWelcomeText"
        data-error-message=""
      />
    </div>
  </div>,
  <div
    class="osdWelcomeView"
    id="osd_legacy_browser_error"
    style="display:none"
  >
    <svg
      viewBox="0 0 64 64"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M19.97,20v20c0,6.63,5.36,12,11.96,12h19.93v8h-19.93c-11.01,0-19.93-8.95-19.93-20v-20h7.97Z"
        style="fill:#00796b;fill-rule:evenodd;stroke-width:0"
      />
      <path
        d="M19.97,4v24h-7.97V4h7.97Z"
        style="fill:#00796b;fill-rule:evenodd;stroke-width:0"
      />
      <path
        d="M27.95,4h3.98c11.01,0,19.93,8.95,19.93,20v12H12v-8s31.9,0,31.9,0v-4c0-6.63-5.36-12-11.96-12h-3.98v-8Z"
        style="fill:#00796b;fill-rule:evenodd;stroke-width:0"
      />
    </svg>
    <h2
      class="osdWelcomeTitle"
    />
    <div
      class="osdWelcomeText"
    />
  </div>,
  <script>
    
            // Since this is an unsafe inline script, this code will not run
            // in browsers that support content security policy(CSP). This is
            // intentional as we check for the existence of __osdCspNotEnforced__ in
            // bootstrap.
            window.__osdCspNotEnforced__ = true;
          
  </script>,
  <script
    src="[object Object]/bootstrap.js"
  />,
]
`;

exports[`Loading page  render favicon  using a valid URL 1`] = `
Array [
  <meta
    charset="utf-8"
  />,
  <meta
    content="IE=edge,chrome=1"
    http-equiv="X-UA-Compatible"
  />,
  <meta
    content="width=device-width"
    name="viewport"
  />,
  <title />,
  null,
  <link
    href="/customFavicon"
    rel="apple-touch-icon"
    sizes="180x180"
  />,
  <link
    href="/customFavicon"
    rel="icon"
    sizes="32x32"
    type="image/png"
  />,
  <link
    href="/customFavicon"
    rel="icon"
    sizes="16x16"
    type="image/png"
  />,
  <link
    href=""
    rel="manifest"
  />,
  <link
    color="#e8488b"
    href="/customFavicon"
    rel="mask-icon"
  />,
  <link
    href="/customFavicon"
    rel="shortcut icon"
  />,
  <meta
    content=""
    name="msapplication-config"
  />,
  <meta
    content="#ffffff"
    name="theme-color"
  />,
  null,
  <meta
    name="add-styles-here"
  />,
  <meta
    name="add-scripts-here"
  />,
  <osd-csp
    data="{\\"strictCsp\\":true}"
  />,
  <osd-injected-metadata
    data="{\\"version\\":\\"opensearchDashboardsVersion\\",\\"buildNumber\\":1,\\"basePath\\":\\"\\",\\"serverBasePath\\":\\"\\",\\"env\\":{\\"packageInfo\\":{\\"version\\":\\"\\",\\"branch\\":\\"\\",\\"buildNum\\":1,\\"buildSha\\":\\"\\",\\"dist\\":true},\\"mode\\":{\\"name\\":\\"production\\",\\"dev\\":true,\\"prod\\":false}},\\"anonymousStatusPage\\":false,\\"i18n\\":{\\"translationsUrl\\":\\"\\"},\\"csp\\":{\\"warnLegacyBrowsers\\":true},\\"uiPlugins\\":[],\\"legacyMetadata\\":{\\"uiSettings\\":{\\"defaults\\":{\\"legacyInjectedUiSettingDefaults\\":true},\\"user\\":{}}},\\"branding\\":{\\"darkMode\\":false,\\"logo\\":{},\\"mark\\":{},\\"loadingLogo\\":{},\\"faviconUrl\\":\\"/customFavicon\\",\\"title\\":\\"custom title\\"}}"
  />,
  <div
    class="osdWelcomeView"
    data-test-subj="osdLoadingMessage"
    id="osd_loading_message"
    style="display:none"
  >
    <div
      class="osdLoaderWrap"
      data-test-subj="loadingLogo"
    >
      <svg
        fill="none"
        viewBox="0 0 90 90"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M53.8,42.4v-7.5c0-6.9-5.5-12.4-12.4-12.4h-2.5v5h2.5c4.1,0,7.4,3.3,7.4,7.5v2.5H34l0,0v-5v-9.9h-5v9.9v5l0,0v5v2.4c0,6.9,5.5,12.4,12.4,12.4h12.4v-5H41.4c-4.1,0-7.4-3.3-7.4-7.5v-2.5L53.8,42.4L53.8,42.4z"
          style="fill:#00796b;fill-rule:evenodd;stroke-width:0"
        />
        <g>
          <path
            d="M75.7374 37.5C74.4878 37.5 73.4748 38.513 73.4748 39.7626C73.4748 58.3813 58.3813 73.4748 39.7626 73.4748C38.513 73.4748 37.5 74.4878 37.5 75.7374C37.5 76.987 38.513 78 39.7626 78C60.8805 78 78 60.8805 78 39.7626C78 38.513 76.987 37.5 75.7374 37.5Z"
            fill="#00796b"
          />
          <animateTransform
            attributeName="transform"
            dur="1.5s"
            from="0 40 40"
            keyTimes="0; .3; .7; 1"
            repeatCount="indefinite"
            to="359.9 40 40"
            type="rotate"
            values="0 40 40; 15 40 40; 340 40 40; 359.9 40 40"
          />
        </g>
      </svg>
      <div
        class="osdWelcomeText"
        data-error-message=""
      />
    </div>
  </div>,
  <div
    class="osdWelcomeView"
    id="osd_legacy_browser_error"
    style="display:none"
  >
    <svg
      viewBox="0 0 64 64"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M19.97,20v20c0,6.63,5.36,12,11.96,12h19.93v8h-19.93c-11.01,0-19.93-8.95-19.93-20v-20h7.97Z"
        style="fill:#00796b;fill-rule:evenodd;stroke-width:0"
      />
      <path
        d="M19.97,4v24h-7.97V4h7.97Z"
        style="fill:#00796b;fill-rule:evenodd;stroke-width:0"
      />
      <path
        d="M27.95,4h3.98c11.01,0,19.93,8.95,19.93,20v12H12v-8s31.9,0,31.9,0v-4c0-6.63-5.36-12-11.96-12h-3.98v-8Z"
        style="fill:#00796b;fill-rule:evenodd;stroke-width:0"
      />
    </svg>
    <h2
      class="osdWelcomeTitle"
    />
    <div
      class="osdWelcomeText"
    />
  </div>,
  <script>
    
            // Since this is an unsafe inline script, this code will not run
            // in browsers that support content security policy(CSP). This is
            // intentional as we check for the existence of __osdCspNotEnforced__ in
            // bootstrap.
            window.__osdCspNotEnforced__ = true;
          
  </script>,
  <script
    src="[object Object]/bootstrap.js"
  />,
]
`;

exports[`Loading page  render favicon  using an invalid URL 1`] = `
Array [
  <meta
    charset="utf-8"
  />,
  <meta
    content="IE=edge,chrome=1"
    http-equiv="X-UA-Compatible"
  />,
  <meta
    content="width=device-width"
    name="viewport"
  />,
  <title />,
  null,
  <link
    href="[object Object]/ui/favicons/apple-touch-icon.png"
    rel="apple-touch-icon"
    sizes="180x180"
  />,
  <link
    href="[object Object]/ui/favicons/favicon-32x32.png"
    rel="icon"
    sizes="32x32"
    type="image/png"
  />,
  <link
    href="[object Object]/ui/favicons/favicon-16x16.png"
    rel="icon"
    sizes="16x16"
    type="image/png"
  />,
  <link
    href="[object Object]/ui/favicons/manifest.json"
    rel="manifest"
  />,
  <link
    color="#e8488b"
    href="[object Object]/ui/favicons/safari-pinned-tab.svg"
    rel="mask-icon"
  />,
  <link
    href="[object Object]/ui/favicons/favicon.ico"
    rel="shortcut icon"
  />,
  <meta
    content="[object Object]/ui/favicons/browserconfig.xml"
    name="msapplication-config"
  />,
  <meta
    content="#ffffff"
    name="theme-color"
  />,
  null,
  <meta
    name="add-styles-here"
  />,
  <meta
    name="add-scripts-here"
  />,
  <osd-csp
    data="{\\"strictCsp\\":true}"
  />,
  <osd-injected-metadata
    data="{\\"version\\":\\"opensearchDashboardsVersion\\",\\"buildNumber\\":1,\\"basePath\\":\\"\\",\\"serverBasePath\\":\\"\\",\\"env\\":{\\"packageInfo\\":{\\"version\\":\\"\\",\\"branch\\":\\"\\",\\"buildNum\\":1,\\"buildSha\\":\\"\\",\\"dist\\":true},\\"mode\\":{\\"name\\":\\"production\\",\\"dev\\":true,\\"prod\\":false}},\\"anonymousStatusPage\\":false,\\"i18n\\":{\\"translationsUrl\\":\\"\\"},\\"csp\\":{\\"warnLegacyBrowsers\\":true},\\"uiPlugins\\":[],\\"legacyMetadata\\":{\\"uiSettings\\":{\\"defaults\\":{\\"legacyInjectedUiSettingDefaults\\":true},\\"user\\":{}}},\\"branding\\":{\\"darkMode\\":false,\\"logo\\":{},\\"mark\\":{},\\"loadingLogo\\":{},\\"title\\":\\"custom title\\"}}"
  />,
  <div
    class="osdWelcomeView"
    data-test-subj="osdLoadingMessage"
    id="osd_loading_message"
    style="display:none"
  >
    <div
      class="osdLoaderWrap"
      data-test-subj="loadingLogo"
    >
      <svg
        fill="none"
        viewBox="0 0 90 90"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M53.8,42.4v-7.5c0-6.9-5.5-12.4-12.4-12.4h-2.5v5h2.5c4.1,0,7.4,3.3,7.4,7.5v2.5H34l0,0v-5v-9.9h-5v9.9v5l0,0v5v2.4c0,6.9,5.5,12.4,12.4,12.4h12.4v-5H41.4c-4.1,0-7.4-3.3-7.4-7.5v-2.5L53.8,42.4L53.8,42.4z"
          style="fill:#00796b;fill-rule:evenodd;stroke-width:0"
        />
        <g>
          <path
            d="M75.7374 37.5C74.4878 37.5 73.4748 38.513 73.4748 39.7626C73.4748 58.3813 58.3813 73.4748 39.7626 73.4748C38.513 73.4748 37.5 74.4878 37.5 75.7374C37.5 76.987 38.513 78 39.7626 78C60.8805 78 78 60.8805 78 39.7626C78 38.513 76.987 37.5 75.7374 37.5Z"
            fill="#00796b"
          />
          <animateTransform
            attributeName="transform"
            dur="1.5s"
            from="0 40 40"
            keyTimes="0; .3; .7; 1"
            repeatCount="indefinite"
            to="359.9 40 40"
            type="rotate"
            values="0 40 40; 15 40 40; 340 40 40; 359.9 40 40"
          />
        </g>
      </svg>
      <div
        class="osdWelcomeText"
        data-error-message=""
      />
    </div>
  </div>,
  <div
    class="osdWelcomeView"
    id="osd_legacy_browser_error"
    style="display:none"
  >
    <svg
      viewBox="0 0 64 64"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M19.97,20v20c0,6.63,5.36,12,11.96,12h19.93v8h-19.93c-11.01,0-19.93-8.95-19.93-20v-20h7.97Z"
        style="fill:#00796b;fill-rule:evenodd;stroke-width:0"
      />
      <path
        d="M19.97,4v24h-7.97V4h7.97Z"
        style="fill:#00796b;fill-rule:evenodd;stroke-width:0"
      />
      <path
        d="M27.95,4h3.98c11.01,0,19.93,8.95,19.93,20v12H12v-8s31.9,0,31.9,0v-4c0-6.63-5.36-12-11.96-12h-3.98v-8Z"
        style="fill:#00796b;fill-rule:evenodd;stroke-width:0"
      />
    </svg>
    <h2
      class="osdWelcomeTitle"
    />
    <div
      class="osdWelcomeText"
    />
  </div>,
  <script>
    
            // Since this is an unsafe inline script, this code will not run
            // in browsers that support content security policy(CSP). This is
            // intentional as we check for the existence of __osdCspNotEnforced__ in
            // bootstrap.
            window.__osdCspNotEnforced__ = true;
          
  </script>,
  <script
    src="[object Object]/bootstrap.js"
  />,
]
`;
